Nav bar mobile flicker fix
I hope this works

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -356,7 +356,9 @@ CSS for Mobile Screens
 @media only screen
 and (min-width : 320px)
 and (max-width : 991px) {
-  .navbar-brand.dark, .navbar-brand.dark
+  .navbar-brand,
+  .navbar-brand.dark,
+  .navbar-brand.dark
   {
     background-color: #222222;
   }
